2023-03-14  Nick Clifton  <nickc@redhat.com>

	PR 30206
	* doc/as.texi (Pseudo Ops): Document that data directives such as
	.byte and .int are not intended for encoding instructions.

2023-02-28  Richard Ball  <richard.ball@arm.com>

	* testsuite/gas/aarch64/mec-invalid.d: New test.
	* testsuite/gas/aarch64/mec-invalid.l: New test.
	* testsuite/gas/aarch64/mec-invalid.s: New test.
	* testsuite/gas/aarch64/mec.d: New test.
	* testsuite/gas/aarch64/mec.s: New test.

2023-02-27  Benson Muite  <benson_muite@emailplus.org>

	PR 28909
	* doc/local.mk (asconfig.texi): Use "cp -p" to preserve
	timestamps.
	* Makefile.in: Regenerate.

2023-02-01  Nick Clifton  <nickc@redhat.com>

	* dwarf2dbg.c (emit_inc_line_addr): Use unsigned constants when
	checking addr_delta.

2023-01-20  Frederic Cambus  <fred@statdns.com>

	* configure.tgt (arm-*-openbsd*): Add target.

2023-01-16  Nick Clifton  <nickc@redhat.com>

	* po/ru.po: Updated Russian translation.

2023-01-03  Nick Clifton  <nickc@redhat.com>

	PR 29952
	* config/tc-i386.c (md_assemble): Avoid constructing translatable
	strings.

2023-01-03  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.
	* po/uk.po: Updated Ukrainian translation.

2022-12-31  Nick Clifton  <nickc@redhat.com>

	* 2.40 branch created.

2022-11-21  Nick Clifton  <nickc@redhat.com>

	PR 29764
	* testsuite/gas/arm/cpu-cortex-a76ae.d: Add arm prefix to the -m
	option passed to objdump.
	* testsuite/gas/arm/cpu-cortex-a77.d: Likewise.
	* testsuite/gas/aarch64/cpu-cortex-a76ae.d: Add aarch64 prefix to
	the -m option passed to objdump.
	* testsuite/gas/aarch64/cpu-cortex-a77.d: Likewise.

2022-10-31  Nick Clifton  <nickc@redhat.com>

	* testsuite/gas/rx/mvtacgu.d: Update expected disassembly.

2022-10-11  Nick Clifton  <nickc@redhat.com>

	* symbols.c (S_GET_VALUE): If the unresolved symbol is the fake
	label provide a more helpful error message to the user.
	(S_GET_VALUE_WHERE): Like S_GET_VALUE, but includes a file/line